将 toolsRes.tex 的一些部分移动到多个小文件：
1. Preamble; 2. title page; 3. Sections in Chapter 系统设置；
4. Section Ludwig in Chapter 论文写作工具； 5. Appendix.

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -1,6 +1,5 @@
 %!TEX program = xelatex
 %!TEX encoding = UTF-8 Unicode
-
 \documentclass[
     11pt,
     base=hide,
@@ -11,349 +10,22 @@
     result=answer,
     toc=onecol,
 ]{elegantbook_sierxue}
-\usepackage{float}
-\usepackage{pdfpages}
-
-% toc: add the glossaries to the table of contents.
-% sort=standard is default, the other two are 'def' and 'use'.
-\usepackage[xindy,toc,counter=section,style=listgroup]{glossaries}
-% \usepackage[nogroupskip]{glossaries-extra}
-\makeglossaries{}
-
-\usepackage{menukeys}
-\definecolor{geyecolor}{RGB}{199,237,204}%
-\pagecolor{geyecolor}
-\renewcommand{\lstlistingname}{{\LaTeX}~模板}% Listing -> \LaTeX{}文档
-\lstdefinestyle{lst-left}{
-    escapeinside=``,
-    xleftmargin=.05\textwidth,
-}
-\lstdefinestyle{lst-right}{
-    escapeinside=``,
-    xrightmargin=.05\textwidth,
-}
-\lstdefinestyle{lst}{
-    escapeinside=``,
-    xleftmargin=.05\textwidth,
-    xrightmargin=.05\textwidth,
-}
-\lstdefinestyle{input}{
-    language=[LaTeX]TeX,
-    numbers=left,
-    frame=none,
-    xleftmargin=.05\textwidth
-}
-\lstdefinestyle{input-float}{
-    float=ht,
-    language=[LaTeX]TeX,
-    numbers=left,
-    frame=none,
-    xleftmargin=.05\textwidth
-}
-
-% Index
-\usepackage{makeidx}
-\makeindex
-% Load glossaries.tex
-\input{glossaries}
-
-\title{开源写作工具快速上手指南}
-\subtitle{科学写作利器 \LaTeX{} 和团队协作神器 Git}
-
-\author{甘湘华}
-\institute{西南财经大学} % Commented out in the cls file.
-\date{\zhtoday}
-\version{0.01}
-
-\extrainfo{本教程基于已经配置好的虚拟机，介绍写作中常用开源工具。
-    最主要的目标是想让读者能在短时间内学会用{\rm \LaTeX{}} 写作排版，
-    以及用~{\rm Git} 工具进行版本控制和团队协作。
-    在使用本虚拟机和本教程的过程中，如果发现其有不当及需改进之处，
-    请不吝指出，谢谢{\rm!!!}}
-
-\logo{logo.png}
-\cover{cover.jpg}
-
-
+\input{preamble}
+\input{title}
 \begin{document}
-
 \maketitle
-
 % \setcounter{tocdepth}{2}
 \tableofcontents
 % \thispagestyle{empty}
-
 \mainmatter%
 \hypersetup{pageanchor=true}
 
 \chapter{系统设置}%
 \label{cha:settings-system}
-
-\section{Virtualbox 虚拟机软件}%
-\label{sec:vbox}
-
-\subsection{参考资料}%
-\label{sub:vbox-refs}
-
-Virtualbox 虚拟机软件参考资料网址：
-\begin{itemize}
-    \item 官方网址： \href{https://www.virtualbox.org/}{https://www.virtualbox.org/}
-    \item 官方论坛： \href{https://forums.virtualbox.org/}{https://forums.virtualbox.org/}
-\end{itemize}
-
-\subsection{下载安装}%
-\label{sub:vbox-install}
-\href{https://www.virtualbox.org/wiki/Downloads}{官方网址}
-下载虚拟机软件通常比较慢，可以在
-\href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/}{清华镜像}下载。
-点击
-\href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/LATEST.TXT}
-{Virtualbox清华镜像最新版本}，可以查到当前最新版本。
-写作这个教程的时候，版本是 6.1.
-Virtualbox 虚拟机的安装分为两个步骤：
-\begin{enumerate}
-    \item 在主机（host computer）上安装基本软件；
-        \begin{itemize}
-            \item \textbf{Windows}: 下载
-                \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/virtualbox-Win-latest.exe}
-                {最新 Virtualbox 基本软件}，按常规安装。
-            \item \textbf{Mac}: 下载
-                \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/virtualbox-osx-latest.dmg}
-                {最新 Virtualbox 基本软件}，按常规安装。
-            \item Linux 的所有发行版可以参考
-                \href{https://www.virtualbox.org/wiki/Linux_Downloads}{官方安装文档}，
-                Debian 系列的发行版可以按下面两种方法安装：
-                \begin{itemize}
-                    \item 在
-                        \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/}
-                        {清华镜像}
-                        下载相应的 \lstinline{deb} 安装包安装。
-                    \item 参考
-                        \href{https://www.virtualbox.org/wiki/Linux_Downloads}
-                        {官方安装文档}
-                        添加源，用 \lstinline{apt} 方式安装。
-                        \begin{note}\label{note:vbox-apt-upgrade}
-                           当版本跳跃时，比如从 6.0 升级到 6.1,
-                           \lstinline{sudo apt update}
-                           并不提醒升级，需要运行命令
-                           \lstinline{sudo apt install virtualbox-6.1}.
-                        \end{note}
-                \end{itemize}
-        \end{itemize}
-    \item 在主机（host computer）上安装 \lstinline{Extension pack}.
-        此步中的 \lstinline{Extension pack} 软件对 Windows, Mac, Linux
-        等都通用。
-        点击
-        \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/}{清华镜像}，
-        选择最新的版本号，
-        假设最新的版本为 6.1.0，
-        则找到并下载
-        \begin{center}\label{center:vm-extension}
-            \lstinline{Oracle_VM_VirtualBox_Extension_Pack-6.1.0.vbox-extpack},
-        \end{center}
-        双击后，按提示安装。
-\end{enumerate}
-
-\subsection{使用虚拟机}%
-\label{sub:vbox-vm}
-
-按照 \S\ref{sub:vbox-install} 完成安装后，
-就可以使用虚拟机 (guest machine) 了。
-虚拟机的一个优点是共享方便，团队成员使用同样的配置大大有利于团队协作。
-为配合本教程，我们精心制作了虚拟机，可以让读者快速地学习常用的开源工具，
-而不用花费大量时间于软件的安装和配置。
-
-\newpage
-\section{使用 Linux 虚拟机}%
-\label{sec:linux}
-
-\subsection{获取虚拟机}%
-\label{ssub:vm-download}
-
-此虚拟机的安装和配置参见 \S\ref{sub:vbox-vm-install-set}.
-
-\subsection{内存分配}%
-\label{ssub:vbox-set-memory}
-
-在虚拟机的系统设置中，可以设置虚拟机所用内存大小。设置内存请遵循以下原则：
-\begin{enumerate}
-    \item 虚拟机的内存不能超过主机物理内存的一半；
-    \item 如要顺畅地运行，最好设置不小于 2048 MB 的虚拟机的内存。
-\end{enumerate}
-
-\subsection{硬盘设置}%
-\label{ssub:vbox-set-vdi}
-
-如果虚拟机运行在固态硬盘上，在虚拟机的存储设置中的属性处，选择固态驱动器。
-
-\subsection{设定共享目录}%
-\label{ssub:vbox-set-share-folder}
-
-当虚拟机需要与主机系统交换文件时，就可以设定共享目录。
-% 重启虚拟主机或者运行命令 \lstinline{sudo systemctl daemon-reload},
-% 共享目录生效。
-共享目录的设定详情参见附录 \S\ref{ssub:vbox-set-share-folder-a}.
-% \begin{tip}\label{tip:vbox-share-folder-activate}
-%     如果曾经运行过 \S\ref{ssub:vbox-ganx-vboxsf} 中的命令授予用户权限，
-%     可以运行命令 \lstinline{sudo systemctl daemon-reload},
-%     共享目录在未重启虚拟机的情况下马上生效。
-% \end{tip}
-
-\subsection{调整虚拟机窗口大小}%
-\label{ssub:vbox-set-window-size}
-
-此虚拟机的窗口大小缺省设置为 \(1360 \times 768\).
-如果需要更大的窗口，可以在打开虚拟机后，于窗口顶部菜单选择
-\menu{视图 > 自动调整尺寸}，然后最大化虚拟机窗口。
-（在 Linux 和  Windows 上通常为点击右上角的方框，在 Mac 上点击左上的放大键）
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=1.0\textwidth]%
-  {media/shots/vm/vlcsnap-2020-01-28-01h24m55s147-vm.png}
-  \caption{\menu{视图 > 自动调整尺寸}}%
-  \label{fig:vm-display}
-\end{figure}
-
-调整虚拟机窗口还有其它方法，我们这里提供两种：
-\begin{enumerate}
-    \item 按组合键 Host + F.（组合键在 Linux 和 Windows 上通常为右边的
-        Ctrl, 在 Mac 上通常为左边的 Command 键）
-    \item 将鼠标移动到窗口边缘，调节窗口大小。
-\end{enumerate}
-
-\subsection{Virtualbox 的其它设置}%
-\label{ssub:vbox-others}
-\begin{enumerate}
-    \item 设置虚拟机的共享剪贴板选项为 \emph{双向}；
-    \item 在 \textbf{设置 --> 存储}
-        菜单中，设置虚拟硬盘是放置在固态硬盘还是机械硬盘上。
-    \item 设置用户界面，隐藏菜单以增加虚拟机窗口大小。
-\end{enumerate}
-\newpage
-\section{Vim 编辑器}%
-\label{sec:vim}
-
-\subsection{参考资料}%
-\label{sub:vim-refs}
-
-\begin{itemize}
-    \item 官方网址： \href{https://www.vim.org/}{https://www.vim.org/}
-    \item 问答网站：
-        \href{https://vi.stackexchange.com/}{https://vi.stackexchange.com/}
-    \item Vim 教程：
-        \begin{itemize}
-            \item \lstinline{vimtutor}\footnote{
-                在终端中，输入 \lstinline{vimtutor} 命令学习 Vim
-                的基本用法。}
-            \item \href{https://github.com/wsdjeg/vim-galore-zh_cn}
-                {Vim 从入门到精通}
-            \item \href{https://item.jd.com/12056490.html}
-                {Vim 使用技巧 (Pratical Vim) 第二版}
-        \end{itemize}
-\end{itemize}
-
-\subsection{常用配置}%
-\label{sub:vim-intro}
-
-\subsubsection{Vim 的配置文件}%
-\label{ssub:vim-config}
-
-本虚拟机中的配置文件为：
-\begin{lstlisting}[style=lst]
-~/.df/dotfiles/vimrc
-~/.df/dotfiles-local/gvimrc
-~/.vimrc_customized
-~/.gvimrc_customized
-\end{lstlisting}
-\lstinline{vimrc} 和 \lstinline{gvimrc} 由
-\S\ref{ssub:vbox-guest-ganx-conf} 中的两个 git 仓库控制，请勿修改。
-你对本台虚拟机的特殊设置可以在 \lstinline{.vimrc_customized} 和
-\lstinline{.gvimrc_customized} 中配置。
-
-\subsubsection{gVim 的个性化设置}%
-\label{ssub:vim-gui-config-customized}
-
-打开 \lstinline{~/.gvimrc_customized}, 进行 gVim 的个性化设置。例如：
-\begin{lstlisting}[style=lst]
-set guifont=Monospace\ 13
-set linespace=4
-\end{lstlisting}
-对于以上两个选项的设置，可以用命令 \lstinline{:h guifont} 和
-\lstinline{:h linespace} 查看帮助。
-例如，在 \lstinline{guifont} 的设置帮助中，有建议在中文系统下，使用如下配置：
-\begin{lstlisting}[xleftmargin=.04\textwidth]
-if has("gui_gtk3")
-  set guifont=Bitstream\ Vera\ Sans\ Mono\ 12,Fixed\ 12
-  set guifontwide=Microsoft\ Yahei\ 12,WenQuanYi\ Zen\ Hei\ 12
-endif
-\end{lstlisting}
-\begin{note}\label{note:guifont}
-    在本虚拟机上，这个建议的设置不尽人意。也许在 \lstinline{Window}
-    系统上还不错。
-\end{note}
-
-\subsection{常用插件}%
-\label{sub:vim-plugins}
-
-\subsubsection{vimtex --- 用 Vim 编辑 \LaTeX{} 的利器}%
-\label{ssub:vim-plugin-vimtex}
-
-插件网址:
-\href{https://github.com/lervag/vimtex}{https://github.com/lervag/vimtex}
-
-常用操作：
-\begin{itemize}
-    \item \lstinline{\ll} 编译 \LaTeX{} 文档；
-    \item \lstinline{\lv} 正向搜索 (Forward search)\footnote{
-        打开 pdf 文档并且指向光标所在文本对应的位置。}；
-    \item \lstinline{\ll} 停止编译 (或者 \lstinline{\lk})；
-    \item \lstinline{\le} 查看错误和警告信息；
-    \item \lstinline{\lc} 清除编译中的辅助文件；
-    \item \lstinline{\lC} 清除编译中的辅助文件以及 pdf 文件；
-    \item \lstinline{ctrl + clik} 反向搜索 (Backward/inverse search)\footnote{
-        按住 ctrl 键，点击 pdf 文档上的内容，光标就会转到 gVim 上相应的位置};
-    \item 更多操作见插件帮助文档;
-    \item 插件的详细文档可以在命令模式下用 \lstinline{h:vimtex} 命令查看。
-\end{itemize}
-
-\section{Texstudio 编辑器}%
-\label{sec:texstudio}
-
-\subsection{参考资料}%
-\label{sub:texstudio-refs}
-
-\begin{itemize}
-    \item 官方网址： \href{https://github.com/texstudio-org/texstudio}
-        {github.com/texstudio-org/texstudio}
-    \item 问答网站：
-        \href{https://github.com/texstudio-org/texstudio/issues}
-        {github.com/texstudio-org/texstudio/issues}
-    \item Texstudio 教程：
-        \begin{itemize}
-            \item \href{https://github.com/texstudio-org/texstudio/wiki}
-                {github.com/texstudio-org/texstudio/wiki}
-        \end{itemize}
-\end{itemize}
-
-\section{Visual Studio Code 编辑器}%
-\label{sec:vsc}
-
-\subsection{参考资料}%
-\label{sub:vsc-refs}
-
-\begin{itemize}
-    \item 官方网址： \href{https://code.visualstudio.com/}
-        {code.visualstudio.com/}
-    \item 官方文档：
-        \href{https://code.visualstudio.com/docs#vscode}
-        {code.visualstudio.com/docs}
-\end{itemize}
-
-%待续
-%%Vim 的学习曲线（To do）。
-%
-%\subsection{Vim 的学习方式}%
-%\label{sub:vim-learning}
+\input{sec-vbox}
+\input{sec-vm}
+\input{sec-vim}
+\input{sec-vsc}
 
 \chapter{\LaTeX{} 使用教程}%
 \label{cha:latex-tips}
@@ -960,91 +632,7 @@ gvim ~/.gitconfig_local
 \label{sec:citation-zotero}
 
 \newpage
-\section{Ludwig 英文语句搜索引擎}%
-\label{sec:writing-ludwig}
-
-Ludwig 英文语句搜索引擎可以帮助研究者选择适用的词句。现在以一个标题为例:
-Solving a Perishables Joint Pricing and Inventory Control Problem
-with \ldots.
-对于一个以英语为母语或者工作语言的人来看，这个标题是有点问题的。
-对于不常用英文写作的研究者，也是情有可原。
-为了提高英文写作水平，可以考虑使用
-\href{https://ludwig.guru/}{ludwig.guru/} 来搜索文献中使用相关词汇的语句。
-
-如果我们对 Perishables Joint Pricing and Inventory Control
-不确定正确与否，可以在搜索框中查看英文文献中对这个短语的使用情况，参见图
-\S\ref{fig:ludwig-search}。
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-13-03.png}
-  \caption{搜索 Perishables Joint Pricing and Inventory Control}%
-  \label{fig:ludwig-search}
-\end{figure}
-
-从图 \S\ref{fig:ludwig-result-1} 及 \S\ref{fig:ludwig-result-2}
-可以看到，搜索的结果不理想。
-因为 Ludwig 使用的语言资料库太大，搜索结果不理想时可以考虑缩小搜索范围。
-注意到缺省情况下筛选功能是关闭了的（可以看到 filter OFF
-字样），我们可以打开筛选选项，根据实际情况选择搜索范围。详情参见图
-\S\ref{fig:ludwig-filter}.
-
-令人遗憾的是，搜索结果任然不理想（见图
-\S\ref{fig:ludwig-result-3}），没有看到完整的匹配，只看到左中位置显示的 60
-SIMILAR 提示。
-这时，我们可以考虑搜索更少的关键词。
-从搜索结果中，我们发现 Perishables
-和其它关键词甚少关联，可以考虑去掉这个关键词后重新搜索。
-搜索结果见图 \S\ref{fig:ludwig-result-4},
-我们可以看到仍然没有得到完美匹配，只看到 60 SIMILAR 提示。
-但令人欣慰的是，在第一个结果中，我们看到了除大小写外的完美匹配。
-可以理解成这个搜索是大小写敏感的。
-这时我们可以考虑把搜索框中的大写字母全部改成小写字母来搜索。
-搜索结果见图 \S\ref{fig:ludwig-result-5}, 我们可以看到两个完美匹配
-(2 EXACT).
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-16-43.png}
-  \caption{搜索结果 1}%
-  \label{fig:ludwig-result-1}
-\end{figure}
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-16-55.png}
-  \caption{搜索结果 2}%
-  \label{fig:ludwig-result-2}
-\end{figure}
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-17-32.png}
-  \caption{筛选搜索范围}%
-  \label{fig:ludwig-filter}
-\end{figure}
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-18-09.png}
-  \caption{搜索结果 3}%
-  \label{fig:ludwig-result-3}
-\end{figure}
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from 2019-12-23 21-19-22.png}
-  \caption{去掉 Perashables 后的搜索结果}%
-  \label{fig:ludwig-result-4}
-\end{figure}
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=1.0\textwidth]{media/shots/ludwig/Screenshot from
-  2019-12-23 21-20-01.png}
-  \caption{去掉 Perashables 后且使用小写字母的搜索结果}%
-  \label{fig:ludwig-result-5}
-\end{figure}
+\input{sec-ludwig}
 
 %\nocite{*}
 
@@ -1052,348 +640,7 @@ SIMILAR 提示。
 
 \appendix
 
-\chapter{系统设置}%
-\label{cha:settings-system-a}
-
-\section{Virtualbox 虚拟机}
-
-\subsection{图解操作}%
-\label{sub:vbox-graphic-illustration}
-
-\subsubsection{设定共享目录的图示}%
-\label{ssub:vbox-set-share-folder-a}
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-52-45.png}
-  \caption{设定共享目录 --- 示意图 1}
-\end{figure}
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-53-28.png}
-  \caption{设定共享目录 --- 示意图 2}
-\end{figure}
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-54-41.png}
-  \caption{设定共享目录 --- 示意图 3}
-\end{figure}
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-55-59.png}
-  \caption{设定共享目录 --- 示意图 4}
-\end{figure}
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{media/shots/vm/Screenshot from 2019-11-29 17-59-22.png}
-  \caption{设定共享目录 --- 示意图 5}
-\end{figure}
-
-\section{Linux 系统}%
-\label{sec:linux-a}
-
-\subsection{Linux 参考资料}%
-\label{sub:linux-refs}
-
-\begin{itemize}
-    \item 官方网址： \href{https://www.linux.org/}{https://www.linux.org/}
-    \item Ubuntu~~： \href{https://cn.ubuntu.com/}{https://cn.ubuntu.com/}
-    \item 社区讨论：
-        \href{https://forum.ubuntu.com.cn/}{https://forum.ubuntu.com.cn/}
-    \item 问答网站：
-        \href{https://askubuntu.com/}{https://askubuntu.com/}
-    \item Linux 教程：
-        \begin{itemize}
-            \item \lstinline{Ubuntu desktop help}\footnote{
-                按 \lstinline{F1} 即可以打开。}
-            \item \href{https://help.ubuntu.com/lts/ubuntu-help/index.html}
-                {Ubuntu 桌面指南}
-            \item \href{https://linuxtools-rst.readthedocs.io/zh_CN/latest/}
-                {Linux 工具快速教程}
-            \item \href{https://dunwu.github.io/linux-tutorial/#/}
-                {Linux 教程}
-        \end{itemize}
-\end{itemize}
-
-% \subsection{Linux 基本知识}%
-% \label{sub:linux-intro}
-
-
-\subsection{Linux 点文件~(dotfiles)配置}%
-\label{sub:dotfiles-settings}
-
-\subsubsection{点文件介绍}%
-\label{ssub:dotfiles-settings-intro}
-
-在 Unix/Linux/Mac 系统上，软件有它们各自的配置文件，通常以~. 开头，
-管它们叫 \emph{点文件}~(~\texttt{dotfiles}).
-这些点文件数量多，并且所在的位置还有所不同，管理起来并不是一个容易的事情。
-一个方法是把所有的这些配置文件放进一个文件夹，对每个配置文件用命令
-\lstinline{ln -s} 链接到原来的位置。
-这个文件夹可以用 git 仓库进行管理，
-可以方便我们把一台电脑上的配置，同步到另外的电脑上。
-
-作者配置的虚拟机上使用
-\href{https://github.com/anishathalye/dotbot}{dotbot} 技术来管理 dotfiles.
-在本虚拟机的 \lstinline{~/.df/} 目录中有两个文件夹: \lstinline{dotfiles}
-中的配置文件是所有电脑中都共同拥有的; \lstinline{dotfiles-local}
-中的配置文件是某个电脑所特有的。
-建议本教程的读者在未掌握 \lstinline{dotfiles}
-的配置前，不要更改这两个文件夹中的任何文件。
-% \begin{tip}\label{note:vim-customized}
-%     如果要对 Vim 做一些个性化的设置，可以参考 \S\ref{ssub:vim-config}.
-% \end{tip}
-
-%\subsubsection{使用本虚拟机的注意事项}%
-%\label{ssub:vbox-guest-ganx}
-
-\subsubsection{同步点文件的 Git 仓库}%
-\label{ssub:vbox-guest-ganx-conf}
-
-本虚拟机的配置文件主要由以下两个仓库控制：
-\begin{itemize}
-    \item \href{https://github.com/sierxue/dotfiles}
-        {https://github.com/sierxue/dotfiles}
-    \item \href{https://github.com/sierxue/dotfiles-local}
-        {https://github.com/sierxue/dotfiles-local}
-\end{itemize}
-
-\subsubsection{设置点文件仓库的更新提示}%
-\label{ssub:vbox-guest-ganx-conf-update-notification}
-
-两个仓库不时更新的，更新配置文件的提交实现后，会发出更新提示。
-如果你 \lstinline{watch (关注)} 了这两个仓库，就可以收到更新提示。
-设置步骤如下：
-\begin{enumerate}
-    \item 访问 \href{https://github.com/sierxue/dotfiles}
-        {https://github.com/sierxue/dotfiles}, 点击右上方
-        \lstinline{watch (关注)} 旁边的下拉菜单，选择 \lstinline{watching}.
-        如果你觉得这个仓库还有用的话，顺便点一下右边的 \lstinline{star}.
-    \item 访问 \href{https://github.com/sierxue/dotfiles-local}
-        {https://github.com/sierxue/dotfiles-local},
-        点击右上方 \lstinline{watch (关注)} 旁边的下拉菜单，
-        选择 \lstinline{watching}.
-        如果你觉得这个仓库还有用的话，顺便点一下右边的 \lstinline{star}.
-    \item 访问 \href{https://github.com/settings/notifications}
-        {https://github.com/settings/notifications},
-        配置你接收提示的选项。缺省设置下，你会在电子邮件里收到你关注的仓库的
-        提交。你还可以打钩 \lstinline{Web and Mobile} 选项。
-\end{enumerate}
-
-\subsubsection{更新点文件 --- 手动方式}%
-\label{ssub:update-dotfiles-manual}
-
-\begin{enumerate}
-    \item 运行下面几个命令，更新 \href{https://github.com/sierxue/dotfiles}
-        {https://github.com/sierxue/dotfiles}:
-\begin{lstlisting}[style=lst]
-cd ~/.df/dotfiles
-git checkout .
-git pull --rebase
-git submodule update --remote --recursive
-./install
-\end{lstlisting}
-    \item 运行下面几个命令，更新
-        \href{https://github.com/sierxue/dotfiles-local}
-        {https://github.com/sierxue/dotfiles-local}:
-\begin{lstlisting}[style=lst]
-cd ~/.df/dotfiles-local
-git checkout .
-git pull --rebase
-git submodule update --remote --recursive
-./install
-\end{lstlisting}
-\end{enumerate}
-
-\subsubsection{更新点文件 --- 自动方式}%
-\label{ssub:update-dotfiles-crontab}
-
-\begin{enumerate}
-    \item 本虚拟机已经将~\S\ref{ssub:update-dotfiles-manual}~中的所有命令写入
-\begin{lstlisting}[style=lst]
-~/.df/dotfiles-local/scripts/pullDotfiles.sh
-\end{lstlisting}
-        脚本 \lstinline{pullDotfiles.sh} 的内容见 Github
-        \href{https://github.com/sierxue/scripts/blob/master/pullDotfiles.sh}
-        {链接}。
-    \item 运行命令 \lstinline{crontab -l}, 确认你看到以下内容：
-\begin{lstlisting}[style=lst]
-SHELL=/usr/bin/zsh
-PATH=/sbin:/bin:/usr/sbin:/usr/bin
-MAILTO=""
-
-@hourly  /usr/bin/zsh ~/.df/dotfiles-local/scripts/pullDotfiles.sh >> ~/.df/log/pullDotfiles.log
-\end{lstlisting}
-\end{enumerate}
-
-\subsection{虚拟机的安装和设置}%
-\label{sub:vbox-vm-install-set}
-
-\subsubsection{虚拟机基本信息}%
-\label{ssub:linux-ubuntu}
-
-\begin{table}[H]
-   \centering
-     \begin{tabular}{llllll}
-     \toprule
-     系统 & 初始安装 & 用户名 & 密码 & 登录方式 \\
-     \midrule
-     Ubuntu 18.04 & 最小安装 & ganx   & 9 & 自动登录\\
-     \bottomrule
-     \end{tabular}%
-   \label{tab:theorem-class}%
-\end{table}%
-
-\subsubsection{设置 keyring 的密码为空}%
-\label{ssub:vm-keyring}
-
-做此设置以及初始安装时设置的 ``自动登录''后，
-可以不输入任何密码使用虚拟机。
-% next
-
-\subsubsection{设置 sudo 时不询问密码}%
-\label{ssub:vm-sudo}
-\begin{enumerate}
-    \item \lstinline{sudo gedit /etc/sudoers.d/ganx}
-    \item 写入下面两行：
-\begin{lstlisting}[style=lst]
-User_Alias      NORMAL = ganx
-NORMAL  ALL = NOPASSWD: ALL
-\end{lstlisting}
-    \item \lstinline{sudo chmod 0440 /etc/sudoers.d/ganx}
-\end{enumerate}
-
-\subsubsection{切换软件源}%
-\label{ssub:vm-source}
-% next
-
-\subsubsection{映射 CapsLock 键到 Ctrl 键}%
-\label{ssub:vm-caps-ctrl}
-
-CapsLock 键的位置非常好，但因为 Unix 用户经常要用 Ctrl 键而从来不用 CapsLock,
-所以做此映射。
-% next
-
-\subsubsection{安装虚拟机的 Guest Additions}%
-\label{ssub:vbox-guest-additions}
-\begin{itemize}
-    \item \textbf{Windows 系统}：参考
-        \href{https://www.virtualbox.org/manual/UserManual.html#additions-windows}{官方使用手册}
-        安装 \lstinline{Guest additions}.
-    \item \textbf{Mac 系统}： \textbf{不需要}~安装
-        \lstinline{Guest additions}.
-    \item \textbf{Linux 系统}： 参考
-        \href{https://www.virtualbox.org/manual/UserManual.html#additions-linux}{官方使用手册}
-    \item \textbf{Linux 系统 Debian 系列}：
-        \begin{enumerate}
-            \item \lstinline{sudo apt update}
-            \item \lstinline{sudo apt install build-essential gcc make perl dkms menu}
-            \item \lstinline{mount} 安装盘
-                \lstinline{VBoxGuestAdditions.iso},~%
-                在光盘目录下运行如下命令安装：
-                 \begin{center}\label{center:vm-guest-additions}
-                     \lstinline{sh~./VBoxLinuxAdditions.run}
-                 \end{center}
-        \end{enumerate}
-\end{itemize}
-\begin{note}\label{note:ubuntu-update}
-    用 \lstinline{sudo apt install} 安装任何软件之前，都需要运行
-    \lstinline{sudo apt install} 来确保软件源提供的软件是最新的。
-    在教程的余下部分，我们省略掉这条命令以节省篇幅。
-\end{note}
-
-\subsubsection{设置虚拟机用户 ganx 创建共享目录的权限}%
-\label{ssub:vbox-ganx-vboxsf}
-\lstinline{sudo usermod -a -G vboxsf ganx}
-
-\subsubsection{安装设置工具 tweak}%
-\label{ssub:vm-treak}
-
-% next
-
-\subsubsection{安装 i-bus 拼音}%
-\label{ssub:pinyin-i-bus}
-\begin{enumerate}
-    \item \lstinline{sudo apt install ibus-libpinyin pinyin-database}
-    \item 安装中文语言。
-    \item 将 ``intelligent pinyin'' 加入 ``Input source''.
-\end{enumerate}
-
-\subsubsection{安装搜狗拼音}%
-\label{ssub:pinyin-sogou}
-\begin{enumerate}
-    \item 在 \href{https://pinyin.sogou.com/linux/}
-        {https://pinyin.sogou.com/linux/} 下载 64 位版本的安装包。\footnote{
-            安装本虚拟机时下载的版本是
-            \lstinline{sogoupinyin_2.3.1.0112_amd64.deb}
-        }
-    \item \lstinline{sudo apt -y install fcitx fcitx-bin fcitx-table-all}
-    \item \lstinline{sudo dpkg -i sogoupinyin_2.3.1.0112_amd64.deb}
-    \item \lstinline{sudo apt-get install -f}
-    \item 在系统设置中的语言设置选择缺省输入方式为 fcitx.
-\end{enumerate}
-
-\subsubsection{安装配置终端 zsh}%
-\label{ssub:vm-zsh}
-
-\begin{lstlisting}[style=lst]
-sudo apt install curl zsh zsh-doc
-sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
-chsh -s $(which zsh)
-\end{lstlisting}
-
-\subsubsection{安装版本控制软件 Git}%
-\label{ssub:vm-git}
-
-\begin{lstlisting}[style=lst]
-sudo apt install git gitk git-gui
-\end{lstlisting}
-
-\subsubsection{安装编辑软件 Vim}%
-\label{ssub:vm-apt-vim}
-
-\begin{lstlisting}[style=lst]
-sudo apt install vim vim-common vim-gnome
-\end{lstlisting}
-
-\subsubsection{安装 pdf 阅读软件 zathura}%
-\label{ssub:vm-zathura}
-
-\begin{lstlisting}[style=lst]
-sudo apt install zathura
-sudo apt install xdotool
-\end{lstlisting}
-
-\subsubsection{安装文献管理器 zotero}%
-\label{ssub:vm-zotero}
-
-在 \href{https://www.zotero.org/download/}{www.zotero.org/download/}
-下载安装包 \lstinline{Zotero-5.x.xx_linux-x86_64.tar.bz2}.
-然后运行如下命令：
-\begin{lstlisting}[style=lst]
-sudo tar -xf ~/Documents/tools/Zotero-.x.xx_linux-x86_64.tar.bz2 -C /opt
-sudo bash /opt/Zotero_linux-x86_64/set_launcher_icon
-sudo ln -s /opt/Zotero_linux-x86_64/zotero.desktop /usr/share/applications/
-sudo chown -R ganx: /opt/Zotero_linux-x86_64
-\end{lstlisting}
-
-\section{Virtualbox 虚拟机}%
-\label{sec:vbox-a}
-
-\subsection{故障排除}%
-\label{sub:vim-troubleshooting}
-
-\subsubsection{gVim 打开文件后不见光标}%
-\label{ssub:vim-ts-cursor}
-
-\begin{enumerate}
-    \item 最大化虚拟机窗口（参见
-        \S\ref{ssub:vbox-set-window-size}）后打开文件，
-        若能见光标就停止，否则进入下一步。
-    \item 打开 \lstinline{~/.gvimrc_customized}, 修改
-        \lstinline{linespace} 的设置。比如，可以尝试  \lstinline{0 - 4}
-        之间的一个值。
-\end{enumerate}
+\input{appendix-system}
 
 \printindex
 \printglossary[title={术语表}]
