可以忽略的微小更新

--- a/learn-latex/basic-02/math-b.tex
+++ b/learn-latex/basic-02/math-b.tex
@@ -3,7 +3,7 @@
 \documentclass[a5paper,12pt]{ctexart}
 \usepackage{amsmath} % 调用宏包 amsmath.
 \begin{document}
-    % 待完成学习：输入环境 equation, 在环境中插入 1 + 2 = 3
+    % 待完成学习：输入环境 equation, 插入 1 + 2 = 3
     带编号的行间数学公式输入方法：
 
 \end{document}
