--- a/learn-latex/basic-02/math-d.tex
+++ b/learn-latex/basic-02/math-d.tex
@@ -6,7 +6,7 @@
     \begin{equation}
         1 + 1 = 2.
     \end{equation}
-    % 已完成学习：输入环境 equation, 在环境中插入 1 + 2 = 3
+    % 已完成学习：输入环境 equation, 插入 1 + 2 = 3
     带编号的行间数学公式输入方法：
     \begin{equation}
         1 + 2 = 3.
