--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -230,8 +230,8 @@
     完成练习后，将文件保存为 \texttt{text-en-b.tex}.
 \end{exercise}
 \begin{cast}\label{cast:documentclass}
-    gVim: \href{media/casts/math-d.mp4}{math-d-vim.mp4};
-    VSCode: \href{media/casts/math-d.mp4}{math-d-vscode.mp4}.
+    gVim: \href{media/casts/text-en-b.mp4}{text-en-b-vim.mp4};
+    VSCode: \href{media/casts/text-en-b.mp4}{text-en-b-vscode.mp4}.
 \end{cast}
 \lstinputlisting[
     style=input-float,
@@ -359,9 +359,9 @@
     中按提示输入相应的内容后，将文件保存为 \texttt{math-c.tex}.
     编译此文件, 观察 pdf 输出。
 \end{exercise}
-\begin{cast}\label{cast:math-b}
-    gVim: \href{media/casts/math-b.mp4}{math-b-vim.mp4};
-    VSCode: \href{media/casts/math-b.mp4}{math-b-vscode.mp4}.
+\begin{cast}\label{cast:math-c}
+    gVim: \href{media/casts/math-c.mp4}{math-c-vim.mp4};
+    VSCode: \href{media/casts/math-c.mp4}{math-c-vscode.mp4}.
 \end{cast}
 要完成练习~\ref{ex:math-c}, 我们需要输入以下内容：
 \begin{lstlisting}[style=lst]
