--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -417,7 +417,7 @@
 \begin{exercise}\label{ex:math-e}
     在 \href{learn-latex/basic-02/math-e.tex}{文件}
     \directory{/Documents/learn-latex/basic-02/math-e.tex}
-    中按提示输入相应的内容后，将文件保存为 \texttt{math-e.tex}.
+    中按提示输入相应的内容后，
     编译此文件, 观察 pdf 输出。
 \end{exercise}
 \begin{cast}\label{cast:math-e}
