可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -230,8 +230,8 @@
     完成练习后，将文件保存为 \texttt{text-en-b.tex}.
 \end{exercise}
 \begin{cast}\label{cast:documentclass}
-    gVim: \href{media/casts/text-en-b.mp4}{text-en-b-vim.mp4};
-    VSCode: \href{media/casts/text-en-b.mp4}{text-en-b-vscode.mp4}.
+    gVim: \href{media/casts/text-en-b-vim.mp4}{text-en-b-vim.mp4};
+    VSCode: \href{media/casts/text-en-b-vscode.mp4}{text-en-b-vscode.mp4}.
 \end{cast}
 \lstinputlisting[
     style=input-float,
@@ -284,8 +284,8 @@
     中按提示输入相应的文字后，编译此文件, 观察 pdf 输出。
 \end{exercise}
 \begin{cast}\label{cast:text-a}
-    gVim: \href{media/casts/text-a.mp4}{text-a-vim.mp4};
-    VSCode: \href{media/casts/text-a.mp4}{text-a-vscode.mp4}.
+    gVim: \href{media/casts/text-a-vim.mp4}{text-a-vim.mp4};
+    VSCode: \href{media/casts/text-a-vscode.mp4}{text-a-vscode.mp4}.
 \end{cast}
 
 \begin{exercise}\label{ex:text-b}
@@ -293,8 +293,8 @@
     中按提示输入相应的文字后，编译此文件, 观察 pdf 输出。
 \end{exercise}
 \begin{cast}\label{cast:text-b}
-    gVim: \href{media/casts/text-b.mp4}{text-b-vim.mp4};
-    VSCode: \href{media/casts/text-b.mp4}{text-b-vscode.mp4}.
+    gVim: \href{media/casts/text-b-vim.mp4}{text-b-vim.mp4};
+    VSCode: \href{media/casts/text-b-vscode.mp4}{text-b-vscode.mp4}.
 \end{cast}
 \begin{share}\label{share:user-designer}
     更多的字体命令，参见
@@ -326,8 +326,8 @@
     中按提示输入相应的内容后，编译此文件, 观察 pdf 输出。
 \end{exercise}
 \begin{cast}\label{cast:math-a}
-    gVim: \href{media/casts/math-a.mp4}{math-a-vim.mp4};
-    VSCode: \href{media/casts/math-a.mp4}{math-a-vscode.mp4}.
+    gVim: \href{media/casts/math-a-vim.mp4}{math-a-vim.mp4};
+    VSCode: \href{media/casts/math-a-vscode.mp4}{math-a-vscode.mp4}.
 \end{cast}
 
 \begin{latex}\label{tex:preamble}
@@ -360,8 +360,8 @@
     编译此文件, 观察 pdf 输出。
 \end{exercise}
 \begin{cast}\label{cast:math-c}
-    gVim: \href{media/casts/math-c.mp4}{math-c-vim.mp4};
-    VSCode: \href{media/casts/math-c.mp4}{math-c-vscode.mp4}.
+    gVim: \href{media/casts/math-c-vim.mp4}{math-c-vim.mp4};
+    VSCode: \href{media/casts/math-c-vscode.mp4}{math-c-vscode.mp4}.
 \end{cast}
 要完成练习~\ref{ex:math-c}, 我们需要输入以下内容：
 \begin{lstlisting}[style=lst]
@@ -404,8 +404,8 @@
     编译此文件，观察 pdf 输出。
 \end{exercise}
 \begin{cast}\label{sol:math-d}
-    gVim: \href{media/casts/math-d.mp4}{math-d-vim.mp4};
-    VSCode: \href{media/casts/math-d.mp4}{math-d-vscode.mp4}.
+    gVim: \href{media/casts/math-d-vim.mp4}{math-d-vim.mp4};
+    VSCode: \href{media/casts/math-d-vscode.mp4}{math-d-vscode.mp4}.
 \end{cast}
 
 如果我们在文档中需要引用公式，
@@ -421,8 +421,8 @@
     编译此文件, 观察 pdf 输出。
 \end{exercise}
 \begin{cast}\label{cast:math-e}
-    gVim: \href{media/casts/math-e.mp4}{math-e-vim.mp4};
-    VSCode: \href{media/casts/math-e.mp4}{math-e-vscode.mp4}.
+    gVim: \href{media/casts/math-e-vim.mp4}{math-e-vim.mp4};
+    VSCode: \href{media/casts/math-e-vscode.mp4}{math-e-vscode.mp4}.
 \end{cast}
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
