可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -424,8 +424,7 @@
 或者用 \texttt{notag} 命令取消为公式编号。
 
 \begin{exercise}\label{ex:math-e}
-    在 \href{learn-latex/basic-02/math-e.tex}{文件}
-    \directory{/Documents/learn-latex/basic-02/math-e.tex}
+    在文件 \href{learn-latex/basic-02/math-e.tex}{math-e.tex}
     中按提示输入相应的内容后，
     编译此文件, 观察 pdf 输出。
 \end{exercise}
