可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -311,8 +311,8 @@
     使用者关注的是内容写作，格式和排版应该交给模板的制作者。
 \end{share}
 
-\subsection{输入数学公式}%
-\label{sub:latex-math}
+\subsection{数学公式排版基础}%
+\label{sub:latex-math-equation}
 
 \begin{latex}\label{tex:math}
     数学公式有两种排版方式：其一是与文字混排，称为\textbf{行内公式}；
