增加目录显示的深度到三级。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -14,7 +14,7 @@
 \input{title}
 \begin{document}
 \maketitle
-% \setcounter{tocdepth}{2}
+\setcounter{tocdepth}{3}
 \tableofcontents
 % \thispagestyle{empty}
 \mainmatter%
