learn latex 增加不带编号的公式输入。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -432,6 +432,23 @@
     gVim: \href{media/casts/math-e-vim.mp4}{math-e-vim.mp4};
     VSCode: \href{media/casts/math-e-vscode.mp4}{math-e-vscode.mp4}.
 \end{cast}
+
+如果需要直接使用不带编号的行间公式，则将公式用命令 \texttt{[~]} 包裹，
+与之等效的是 \texttt{equation*} 环境 和 \texttt{displaymath} 环境。
+有人更喜欢 \texttt{equation*}，因为其体现了带星号和不带星号的环境之间的区别。
+
+\begin{exercise}\label{ex:math-f}
+    在文件 \href{learn-latex/basic-02/math-f.tex}{math-f.tex}
+    中按提示输入相应的内容后，
+    编译此文件, 观察 pdf 输出。
+\end{exercise}
+\begin{cast}\label{cast:math-f}
+    gVim: \href{media/casts/math-f-vim.mp4}{math-f-vim.mp4};
+    VSCode: \href{media/casts/math-f-vscode.mp4}{math-f-vscode.mp4}.
+\end{cast}
+
+更多的公式排版知识，可以参考 \hyperlink{books/lshort-zh-cn.pdf.51}%
+{《一份不太简短的LATEX介绍》\S4.2}.
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \newpage
