cls customization: 增加 tip, share, latex, cast 环境 (environment)。

--- a/elegantsierxue310.cls
+++ b/elegantsierxue310.cls
@@ -355,6 +355,8 @@
   \newcommand{\versionname}{\textit{版本：}}
   \RequirePackage[\ELEGANT@cite]{gbt7714}
   \newcommand{\notename}{笔记}
+  \newcommand{\tipname}{提示}
+  \newcommand{\sharename}{分享}
   \renewcommand*{\proofname}{证明}
   \newcommand{\problemname}{例题}
   \newcommand{\definitionname}{定义}
@@ -365,7 +367,9 @@
   \newcommand{\propositionname}{命题}
   \newcommand{\corollaryname}{推论}
   \newcommand{\examplename}{例}
+  \newcommand{\learningname}{{\LaTeX} 知识点}
   \newcommand{\exercisename}{练习}
+  \newcommand{\castname}{演示}
   \newcommand{\remarkname}{注}
   \newcommand{\assumptionname}{假设}
   \newcommand{\conclusionname}{结论}
@@ -388,6 +392,8 @@
   \newcommand{\versionname}{\textbf{Version: }}
   \bibliographystyle{\ELEGANT@bibstyle}
   \newcommand{\notename}{Note}
+  \newcommand{\tipname}{Tip}
+  \newcommand{\sharename}{Tip}
   \newcommand{\proofname}{Proof}
   \newcommand{\problemname}{Problem}
   \newcommand{\definitionname}{Definition}
@@ -398,7 +404,9 @@
   \newcommand{\propositionname}{Proposition}
   \newcommand{\corollaryname}{Corollary}
   \newcommand{\examplename}{Example}
+  \newcommand{\learningname}{{\LaTeX} Learning}
   \newcommand{\exercisename}{Exercise}
+  \newcommand{\castname}{Screencast}
   \newcommand{\remarkname}{Remark}
   \newcommand{\assumptionname}{Assumption}
   \newcommand{\conclusionname}{Conclusion}
@@ -607,6 +615,15 @@
 % second（orange-thm）: proof note remark  
 % third（blue-prop):  assumptions property conclusion custom
 
+%% Latex with counter
+\newcounter{tex}[chapter]
+\setcounter{tex}{0}
+\renewcommand{\thetex}{\thechapter.\arabic{tex}}
+\newenvironment{latex}[1][]{
+  \refstepcounter{tex}
+  \par\noindent\textbf{\color{main}{\learningname}\thetex #1 }\rmfamily}{
+  \par\ignorespacesafterend}
+
 %% Example with counter
 \newcounter{exam}[chapter]
 \setcounter{exam}{0}
@@ -627,6 +644,17 @@
     \textbf{\color{main}{\exercisename}\theexer #1 }\rmfamily}{
     \par\ignorespacesafterend}
 
+%% Exercise with counter
+\newcounter{cast}[chapter]
+\setcounter{cast}{0}
+\renewcommand{\thecast}{\thechapter.\arabic{cast}}
+\newenvironment{cast}[1][]{
+  \refstepcounter{cast}
+  \par\noindent\makebox[-3pt][r]{
+    \scriptsize\color{red!90}\faYoutubePlay\quad}
+    \textbf{\color{main}{\castname}\thecast}\rmfamily}{
+    \par\ignorespacesafterend}
+
 %% Problem with counter
 \newcounter{prob}[chapter]
 \setcounter{prob}{0}
@@ -640,6 +668,16 @@
   \par\noindent\makebox[-3pt][r]{
     \scriptsize\color{red!90}\textdbend\quad}
     \textbf{\color{second}\notename} \citshape}{\par}
+
+\newenvironment{tip}{
+  \par\noindent\makebox[-3pt][r]{
+    \scriptsize\color{red!90}\faStar\quad}
+    \textbf{\color{second}\tipname} \citshape}{\par}
+
+\newenvironment{share}{
+  \par\noindent\makebox[-3pt][r]{
+    \scriptsize\color{red!90}\manerrarrow\quad}
+    \textbf{\color{second}\sharename} \citshape}{\par}
 
 \newenvironment{proof}{
   \par\noindent\textbf{\color{second}\proofname\;}
